<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/mainBgColor"
    app:cardCornerRadius="20dp"
    app:cardPreventCornerOverlap="true"
    app:contentPadding="8dp"
    app:cardElevation="10dp"
    tools:ignore="MissingConstraints">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/prelim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/prelim"
                android:textColor="@color/colorAccent"
                android:textSize="25sp"
                android:textStyle="bold" />

        </FrameLayout>
            <!-- BARRIER -->
        <layouts.RoundedLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            app:bgColor="@color/colorAccent"
            app:cornerRadius="40dp" />
            <!-- BARRIER END -->
        <FrameLayout
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/midterm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/midterm"
                android:textColor="@color/colorAccent"
                android:textSize="25sp"
                android:textStyle="bold" />

        </FrameLayout>
            <!-- BARRIER -->
        <layouts.RoundedLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            app:bgColor="@color/colorAccent"
            app:cornerRadius="40dp" />
            <!-- BARRIER END -->
        <FrameLayout
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/finals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/finals"
                android:textColor="@color/colorAccent"
                android:textSize="25sp"
                android:textStyle="bold" />

        </FrameLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>