<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBgColor"
        android:orientation="vertical">

        <!-- ToolBar -->
        <layouts.RoundedLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:bottomLeftCornerRadius="15dp"
            app:bottomRightCornerRadius="15dp"
            app:bgColor="@color/toolbarColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    app:srcCompat="@mipmap/ic_logo"
                    tools:srcCompat="@mipmap/ic_logo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="50dp"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>
        </layouts.RoundedLayout>
        <!-- Toolbar End  -->

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="70dp"
                android:paddingTop="10dp"
                android:paddingRight="70dp"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/my_subject_strip_drawable" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/mainBgColor"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/my_subject"
                    android:textColor="#1976D2"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:textColor="#3F51B5"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edittext_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/toolbarColor"
                android:hint="@string/dayHint"
                android:textColorHint="@color/hintColor"
                android:textColor="@color/toolbarColor"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TextContrastCheck"
                android:importantForAutofill="no" />

        </LinearLayout>

        <layouts.RoundedLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:bgColor="#A2CDFB"
            app:topLeftCornerRadius="15dp"
            app:topRightCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="10dp"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp">

                <FrameLayout
                    android:id="@+id/scene_root"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <include layout="@layout/add_subj_fragment_min" />

                </FrameLayout>

                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                    android:id="@+id/refresh_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/subjects_list_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />


                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

            </LinearLayout>

        </layouts.RoundedLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>